<resources>
    <string name="app_name">Area Guide</string>
    <string name="gps_alert_title">GPS is not Enabled!</string>
    <string name="gps_alert_msg">Do you want to turn on GPS?</string>
    <string name="gps_alert_positive">Yes</string>
    <string name="gps_alert_negative">No</string>
    <string name="curr_loc_error">Can\'t get current location</string>
    <string name="enter_area">Enter Area</string>
    <string name="loading">Loading…</string>
    <string name="open_opened">Open</string>
    <string name="open_closed">Closed</string>
    <string name="unknown_distance">Unknown distance away(click to retry)</string>
    <string name="distance_error">Can\'t get distance</string>
    <string name="away">&#160;away.</string>
    <string name="unknown">Unknown</string>
    <string name="dial_close">Close</string>
    <string name="no_conn">No Connection</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="search_hint">PortHarcourt</string>
    <string name="search_btn">Search</string>
    <string name="use_my_loc_btn">Use my location</string>
    <string name="welcome_txt">Welcome to Area Guide \n Search for your AREA</string>
    <string name="welcome_img_desc">Welcome Image</string>
    <string name="opening_status">Opening status:</string>
    <string name="rating">Rating:</string>
    <string name="loading_distance">loading distance…</string>
    <string name="open_map">Open map</string>
    <string name="logo">Logo</string>
    <string name="about">About</string>
    <string name="txt_about">
        Area Guide lets you find places around your current area, or for a searched area. \n
        \nThis version supports various category of places, including restaurants, banks, book stores, beauty shops, gas stations,
        hospitals, etc. It allows results to be sorted based on popularity or closeness. \n
        \nIt gives estimated distance to a place from your current location. It also opens up Google maps to show the place location
    </string>
    <string name="copyright">AreaGuide v1.2 \nDeveloped by AhTaYa Group</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_sort_by_key">pref_sort_by_key</string>
    <string name="pref_types_key">pref_types_key</string>
    <string name="sort_by_default">distance</string>
    <string name="settings">Settings</string>
</resources>
