<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar android:id="@+id/toolbar"
    android:background="@color/colorPrimary"
    app:theme="@style/Toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="16dp">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/logo" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:text="@string/app_name" />
        <ImageView
            android:id="@+id/about_ico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/about"
            android:layout_gravity="center"
            android:contentDescription="@string/about" />
    </LinearLayout>

</android.support.v7.widget.Toolbar>
