<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ahtaya.chidozie.areaguide.AboutActivity" >

    <include layout="@layout/toolbar" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/about_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:text="@string/txt_about"
            android:textColor="@color/gray"
            android:textSize="@dimen/txt_20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/txt_16sp" />

    </LinearLayout>

</ScrollView>
</LinearLayout>
